--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>User's Pokedex</title>
+        <h2>Welcome To Pokedex</h2>
         <link rel="stylesheet" href="style.css" />
         <link
             href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
             rel="stylesheet"
         />
     </head>
+
     <body>
         <div class="container">
             <h1>User's Pokedex</h1>
